--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,40 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  color: black;
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+
+  position: relative;
+}
+
+header {
+  right: 200px;
+  height: 50px;
+}
+aside {
+  left: calc(100vw - 200px);
+  height: 100vh;
+}
+main {
+  top: 50px;
+  height: calc(100vh - 50px);
+  right: 200px;
+}
+
+.add-product {
+  font-family: sans-serif;
+  padding: 16px;
+}
+
+.Crop-Controls {
+  margin-bottom: 10px;
+}
+.Crop-Controls > * {
+  margin-bottom: 3px;
+}
+
+img {
+  max-width: 100%;
 }
